--- a/dude-graph.html
+++ b/dude-graph.html
@@ -225,7 +225,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             /**
              * Creates the dude-graph and the SVG renderer
              */
-            attached: function () {
+            initialize: function () {
                 this.set("dudeGraphElement", this);
                 this.set("graph", new dudeGraph.Graph());
                 this.set("renderer", new dudeGraph.Renderer());
@@ -287,7 +287,6 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             createVariable: function (variableData) {
                 var variable = new dudeGraph.Variable(variableData);
                 this.get("graph").addVariable(variable);
-                // TODO: create variable block
             },
 
             /**
