graph.graphBlocksIds should not be public

--- a/test/graph.html
+++ b/test/graph.html
@@ -912,16 +912,16 @@
             block2.addPoint(outputPoint2);
             outputPoint2.connect(inputPoint1);
             expect(graph.graphBlocks).to.have.length(2);
-            expect(graph.graphBlocksIds[block1.blockId]).to.be.equals(block1);
-            expect(graph.graphBlocksIds[block2.blockId]).to.be.equals(block2);
+            expect(graph.blockById(block1.blockId)).to.be.equals(block1);
+            expect(graph.blockById(block2.blockId)).to.be.equals(block2);
             expect(graph.graphConnections).to.have.length(1);
             expect(block1.blockInputs).to.have.length(1);
             expect(block2.blockOutputs).to.have.length(1);
             expect(outputPoint2.pointConnections).to.have.length(1);
             graph.removeBlock(block1);
             expect(graph.graphBlocks).to.have.length(1);
-            expect(graph.graphBlocksIds[block1.blockId]).to.be.undefined;
-            expect(graph.graphBlocksIds[block2.blockId]).to.be.equals(block2);
+            expect(graph.blockById(block1.blockId)).to.be.null;
+            expect(graph.blockById(block2.blockId)).to.be.equals(block2);
             expect(graph.graphConnections).to.have.length(0);
             expect(block1.blockInputs).to.have.length(0);
             expect(block2.blockOutputs).to.have.length(1);
