--- a/demo/audigame/audigame.html
+++ b/demo/audigame/audigame.html
@@ -4,6 +4,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../../../polymer/polymer.html">
 <link rel="import" href="../../../iron-localstorage/iron-localstorage.html">
 <link rel="import" href="../../../iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../../../paper-toast/paper-toast.html">
 <link rel="import" href="../../dude-graph.html">
 <script src="builder.js"></script>
 <script src="data.js"></script>
@@ -15,9 +16,19 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         .container {
             height: 100%;
         }
+
+        #success {
+            --paper-toast-background-color: var(--paper-green-500);
+        }
+
+        #error {
+            --paper-toast-background-color: var(--paper-red-500);
+        }
     </style>
     <template>
         <div class="container">
+            <paper-toast id="success"></paper-toast>
+            <paper-toast id="error"></paper-toast>
             <iron-localstorage
                     name="dude-graph-data"
                     value="{{ graphData }}">
@@ -112,7 +123,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @private
              */
             _error: function (e) {
-                console.error(e.detail.error.message);
+                this.$.error.text = e.detail.error.message;
+                this.$.error.open();
             },
 
             /**
@@ -122,7 +134,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @private
              */
             _success: function (e) {
-                console.log(e.detail);
+                this.$.success.text = e.detail;
+                this.$.success.open();
             },
 
             /**
